--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shimmer: ^3.0.0
   flutter_inappwebview: ^6.0.0
   flutter_staggered_grid_view: ^0.7.0
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
