--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_inappwebview: ^6.0.0
   flutter_staggered_grid_view: ^0.7.0
   cached_network_image: ^3.3.1
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
