--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,8 @@ dependencies:
   get: ^4.6.6
   shimmer: ^3.0.0
   flutter_inappwebview: ^6.0.0
-  flutter_staggered_grid_view: ^0.7.0
   flutter_screenutil: ^5.9.3
+  flutter_carousel_slider: ^1.1.0
 
 dev_dependencies:
   flutter_test:
