--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_inappwebview: ^6.0.0
   flutter_screenutil: ^5.9.3
   flutter_carousel_slider: ^1.1.0
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
